fix: iphone screen overflow

--- a/src/styles/admin/pages/VerifyOTP.css
+++ b/src/styles/admin/pages/VerifyOTP.css
@@ -90,20 +90,47 @@ input {
   }
 
   .otp-nums {
-    justify-content: center;
-    margin: 20px auto;
     display: flex;
+    justify-content: center;
     gap: 10px;
+    margin: 20px auto;
 
     .otp-input {
       width: 50px;
       padding: 10px;
-      outline: none;
       text-align: center;
       border-radius: 10.8px;
+      outline: none;
 
       &:focus {
         border: 2px solid #000;
+      }
+    }
+
+    @media (max-width: 576px) {
+      gap: 10px;
+
+      .otp-input {
+        width: 40px;
+        padding: 8px;
+      }
+    }
+
+    @media (max-width: 375px) {
+      gap: 8px;
+
+      .otp-input {
+        width: 36px;
+        padding: 6px;
+      }
+    }
+
+    @media (max-width: 320px) {
+      gap: 6px;
+
+      .otp-input {
+        width: 30px;
+        padding: 6px;
       }
     }
   }
